add_subdirectory(cameras)


#add_subdirectory(mainwindowview)



#add_subdirectory(createprojectview)
#add_subdirectory(createprojectmodel)
#add_subdirectory(createprojectpresenter)

#add_subdirectory(openprojectview)
#add_subdirectory(openprojectmodel)

#add_subdirectory(featureextractorview)
#add_subdirectory(featureextractormodel)
#
#add_subdirectory(featurematchingview)
#add_subdirectory(featurematchingmodel)

#add_subdirectory(projectmodel)
#add_subdirectory(camerasmodel)
#add_subdirectory(camerasview)
#add_subdirectory(imagesmodel)
#add_subdirectory(settingsmodel)
#add_subdirectory(settingsview)


#add_subdirectory(exportorientationsview)
#add_subdirectory(georeference/model)
#add_subdirectory(georeference/view)
