add_subdirectory(cameras)


#add_subdirectory(mainwindowview)

#add_subdirectory(featurematchingview)
#add_subdirectory(featurematchingmodel)

#add_subdirectory(projectmodel)
#add_subdirectory(camerasmodel)
#add_subdirectory(camerasview)
#add_subdirectory(imagesmodel)
#add_subdirectory(settingsmodel)
#add_subdirectory(settingsview)


#add_subdirectory(exportorientationsview)
#add_subdirectory(georeference/model)
#add_subdirectory(georeference/view)
